DE272, DE286, DE 271, DE276 and other fixes relating to Hadoop Map/Reduce. DE 288 is a dup of DE 278 and Im closing it out. Other changes; 	Changes to set the directory ownership for map/reduce properly (mapred/hdfs). 	Adjusted a few hadoop parameter settings to RA values (feedback from AD & Joey). 	Set the jobtracker and jobtracker.http address:port to the master node IP (feedback from Joey).

--- a/chef/cookbooks/hadoop/templates/default/hadoop-env.sh.erb
+++ b/chef/cookbooks/hadoop/templates/default/hadoop-env.sh.erb
@@ -25,4 +25,5 @@ export HADOOP_NAMENODE_OPTS="<%= @node[:hadoop][:env][:hadoop_namenode_opts] %>"
 export HADOOP_SECONDARYNAMENODE_OPTS="<%= @node[:hadoop][:env][:hadoop_secondarynamenode_opts] %>"
 export HADOOP_DATANODE_OPTS="<%= @node[:hadoop][:env][:hadoop_datanode_opts] %>"
 export HADOOP_JOBTRACKER_OPTS="<%= @node[:hadoop][:env][:hadoop_jobtracker_opts] %>"
+export HADOOP_BALANCER_OPTS="<%= @node[:hadoop][:env][:hadoop_balancer_opts] %>"
 export HADOOP_TASKTRACKER_OPTS="<%= @node[:hadoop][:env][:hadoop_tasktracker_opts] %>"
