The comma is missing on dfs_data_dir when multiple disks are detected (/etc/hadoop/conf/hdfs-site.xml). Changed:     <value><%= node[:hadoop][:hdfs][:dfs_data_dir] %></value> To:     <value><%= node[:hadoop][:hdfs][:dfs_data_dir].join(",") %></value>

--- a/chef/cookbooks/hadoop/templates/default/hdfs-site.xml.erb
+++ b/chef/cookbooks/hadoop/templates/default/hdfs-site.xml.erb
@@ -96,7 +96,7 @@
 
   <property>
     <name>dfs.data.dir</name>
-    <value><%= node[:hadoop][:hdfs][:dfs_data_dir] %></value>
+    <value><%= node[:hadoop][:hdfs][:dfs_data_dir].join(",") %></value>
     <description>Determines where on the local filesystem an DFS data node should
       store its blocks. If this is a comma-delimited list of
       directories, then data will be stored in all named directories,
