works with new drag and drop contraints.  This is the ONLY barclamp with components that can be installed on the admin node.

--- a/crowbar_framework/app/views/barclamp/hadoop/_edit_deployment.html.haml
+++ b/crowbar_framework/app/views/barclamp/hadoop/_edit_deployment.html.haml
@@ -5,7 +5,7 @@
 :javascript
   $(document).ready(function(){
     var constraints = { 
-      "hadoop-secondarynamenode": { "unique": false, "count": -1 },
+      "hadoop-secondarynamenode": { "unique": false, "count": -1, "admin": true },
       "hadoop-masternamenode": { "unique": false, "count": -1 },
       "hadoop-edgenode": { "unique": false, "count": -1 },
       "hadoop-slavenode": { "unique": false, "count": -1 }
